Feat: Update Oracle Loss Plotting

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ paper_predictions/
 param_results/
 predictions/
 summary/
+plotting/*.txt
+plotting/*.log
 caida_preprocessing/*.npy
 caida_preprocessing/*.npz
 caida_preprocessing/*pcap 
